k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats-api
  labels:
    app: cats-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cats-api
  template:
    metadata:
      labels:
        app: cats-api
    spec:
      containers:
        - name: cats-api
          image: zuryanov/cats-api:1.1.0
          ports:
            - containerPort: 8080
